objects/css_job_detail__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>For Mapping Job Detail Pages based on Status &amp; Profile</description>
    <fields>
        <fullName>DetailPage__c</fullName>
        <description>Detail Job Page where the Navigation should be</description>
        <label>DetailPage</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobStatus__c</fullName>
        <description>Current Status of the Job</description>
        <label>JobStatus</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Navigate_To__c</fullName>
        <description>Field to capture where the users wants to Navigate</description>
        <label>Navigate To</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserProfile__c</fullName>
        <description>Logged In User&apos;s profile</description>
        <label>UserProfile</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>CSS Job Detail</label>
    <listViews>
        <fullName>CMI_View</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>DetailPage__c</columns>
        <columns>JobStatus__c</columns>
        <columns>Navigate_To__c</columns>
        <columns>UserProfile__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>CMI View</label>
        <language>en_US</language>
    </listViews>
</CustomObject>